add detached build instructions